<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_home_list"
            android:icon="@drawable/ic_menu_home_list"
            android:title="@string/menu_home_list" />
        <item
            android:id="@id/nav_history_list"
            android:icon="@drawable/ic_menu_history_list"
            android:title="@string/menu_history_list" />

        <item android:title="@string/menu_title_function">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@id/nav_media_control"
                        android:icon="@drawable/ic_menu_media_control"
                        android:title="@string/menu_media_control" />
                    <item
                        android:id="@id/nav_power_control"
                        android:icon="@drawable/ic_menu_power_control"
                        android:title="@string/menu_power_control" />

                </group>
            </menu>
        </item>

    </group>

</menu>
